# eu-legal-recommender

./: .gitignore  Procfile  README.md  database_utils.py  requirements.txt
docs/: DOCSTRING_TEMPLATE.md  METHODOLOGY.md  METHODOLOGY_recommender.md  PROJECT_STRUCTURE.md  README.md  README_recommender.md  README_scraper.md  README_summariser.md  STYLE_GUIDE.md  keywordplan.md  summariserplan.md
notebooks/: EDA.ipynb  analyze_diversity_results.ipynb  analyze_weight_optimization.ipynb  cleaned_text_length_analysis.ipynb  sample_summaries.md  summary_quality_analysis.ipynb
recommender/: .coveragerc  .env  METHODOLOGY.md  README.md  README_recommender.md  __init__.py  cli.py  pyproject.toml  requirements.txt  run_recommender.py  setup.py
recommender/docs/api/: README.md
recommender/docs/development/: README.md
recommender/docs/guides/: README.md
recommender/evaluation/: analyze_bottling_results.ipynb  analyze_weight_optimization.ipynb  bottling_company_client_test_data.json  bottling_optimization_results.json  create_test_data.py  energy_optimization_results.json  evaluation_plan.md  renewable_energy_client_test_data.json  run_bottling_optimization.py  run_diversity_evaluation.py  run_weight_optimization.py  test_data.json  weight_optimization_results.json
recommender/examples/: README.md  __init__.py  basic_usage.py  comprehensive_temporal_boost_example.py  feedback_integration_example.py  pinecone_recommender_example.py  weight_adjustment_example.py  weight_optimization_example.py
recommender/examples/basic/: __init__.py  document_similarity_example.py
recommender/examples/personalized/: __init__.py  personalized_recommender_example.py
recommender/examples/profiles/: __init__.py  try_renewable_client.py
recommender/profiles/: bottling_company_client.json  bottling_company_client_description.md  bottling_company_documents.xlsx  bottling_company_eurovoc.xlsx  renewable_energy_client.json  renewable_energy_client_description.md  renewable_energy_documents.xlsx  renewable_energy_eurovoc.xlsx  update_profile_with_correct_ids.py
recommender/profiles/fake_clients/: client_adtech_01.json  client_aerospace_01.json  client_agribiz_01.json  client_analytics_01.json  client_auto_01.json  client_automation_01.json  client_banking_01.json  client_biotech_01.json  client_chemical_01.json  client_construction_01.json  client_consumergoods_01.json  client_cyber_01.json  client_ecommerce_01.json  client_edu_01.json  client_electronics_01.json  client_fintech_01.json  client_foodbev_01.json  client_healthcare_01.json  client_hospitality_01.json  client_insurance_01.json  client_investment_bank_01.json  client_legal_01.json  client_logistics_01.json  client_luxury_01.json  client_maritime_01.json  client_media_01.json  client_mining_01.json  client_oilgas_01.json  client_pharma_01.json  client_pr_01.json  client_rating_01.json  client_sportswear_01.json  client_tech_01.json  client_telecom_01.json  client_waste_01.json
recommender/results/: optimized_weights.json
recommender/scripts/: debug_category_preferences.py  direct_test_optimizer.py  index_documents.py  patch_all_dictionaries.py  recreate_embeddings.py  run_benchmarks.py  setup_environment.py  test_recommender_components.py
recommender/src/: __init__.py  config.py
recommender/src/api/: __init__.py
recommender/src/models/: __init__.py  embeddings.py  features.py  feedback.py  personalized_recommender.py  pinecone_recommender.py  ranker.py  similarity.py  user_profile.py
recommender/src/scripts/: __init__.py  index_documents.py  recreate_embeddings.py  test_recommender.py
recommender/src/utils/: README.md  __init__.py  data_processing.py  db_connector.py  dict_patch.py  evaluation.py  exceptions.py  generate_embeddings.py  logging.py  pinecone_embeddings.py  recommender_evaluation.py  weight_config.py  weight_optimizer.py
recommender/streamlit_app/: app.py  app_clean.py  document_cache.py  enhanced_app.py
recommender/streamlit_app/components/: __init__.py  ui.py  visualization.py
recommender/tests/: __init__.py  conftest.py  run_tests.py  test_embeddings.py  test_personalized_recommender.py  test_pinecone_recommender.py  test_user_profile.py  test_weight_optimizer.py
scraper/: README_scraper.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_scraper.py
scraper/data/: eurlex_data_models.sql
scraper/src/: __init__.py  deduplicate.py  document_tracker.py  main.py  parsers.py  scraper.py  storage.py  validation.py
scraper/src/test/: __init__.py
summarization/: __init__.py  pyproject.toml  requirements.txt  run_summarization.py  sample_summaries.md  setup.py  summariserplan.md
summarization/src/: __init__.py  keyword_extractor.py  pipeline.py  post_processor.py  run_pipeline.py
summarization/src/abstractive/: __init__.py  bart_finetuner.py
summarization/src/extractive/: __init__.py  lexlm_wrapper.py
summarization/src/postprocessing/: __init__.py  deepseek_processor.py  process_existing_summaries.py
summarization/src/preprocessing/: __init__.py  clean_and_reprocess.py  html_parser.py  process_documents.py
summarization/src/testing/: test_pipeline.py  test_tier3.py  test_tier4.py
summarization/src/utils/: README.md  __init__.py  add_word_counts.py  config.py  database_utils.py  text_chunking.py  tier3_utils.py  tier4_utils.py  tier_processing.py  tier_utils.py
