[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eurlex-scraper"
version = "0.1.0"
description = "A comprehensive tool for scraping legislative documents from EUR-Lex"
readme = "README.md"
authors = [
    {name = "EU Legal Recommender Team"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[project.scripts]
eurlex-scraper = "scraper.main:main"

[tool.pytest]
testpaths = ["src/test"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
